tests/ui/bad_integer.rs
use monostate::MustBe;

fn main() {
    let _ = MustBe!(1u15);
}
